Initial re-commit for v0.3.0.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 repository: https://github.com/matanlurey/sector
 
 dependencies:
+  lodim: ^0.1.1
   meta: ^1.15.0
 
 dev_dependencies:
